# wordle-game-gear-academy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
game-session/: Cargo.toml  build.rs
game-session/session-io/: Cargo.toml
game-session/session-io/src/: lib.rs
game-session/src/: lib.rs
game-session/tests/: unit_tests.rs
wordle/: Cargo.toml  build.rs
wordle/src/: lib.rs
wordle/wordle-io/: Cargo.toml
wordle/wordle-io/src/: lib.rs
