[package]
name = "wordle-game"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "wordle",
    "game-session",
]

[workspace.dependencies]
gstd = "1.4.2"
gmeta = "1.4.2"
gear-wasm-builder = "1.4.2"
gtest = "1.4.2"
# gclient = "1.4.2"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }